# enum-forward

./: .gitignore  Cargo.toml
enum-forward/: Cargo.toml
enum-forward-macros/: Cargo.toml
enum-forward-macros/src/: common.rs  error.rs  forward.rs  lib.rs
enum-forward/src/: lib.rs
enum-forward/tests/: builder.rs
src/: common.rs  derive.rs  error.rs  forward.rs  lib.rs
tests/: ambiguous_associated_items.rs  arg_patterns.rs  async-trait.rs  builder.rs  compiles.rs  complex_generics.rs  const_generics.rs  field_attrs.rs  foreign_types.rs  generics.rs  latebound.rs  method_generics.rs  multiple_enums.rs  multiple_traits.rs  no_std.rs  orders.rs  result_alias.rs  return_self.rs  scopes.rs  serde.rs  trait_cfg.rs  type_annotations_needed.rs  ucfs.rs  variant_cfg.rs
