[package]
name = "enum-forward"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
once_cell = "^1.0.1"
quote = "^1.0"
proc-macro2 = "^1.0"
syn = { version = "^2.0", features = ["full"] }

[dev-dependencies]
rand = ">= 0.5.5, <= 0.6.1"
enum_derive = "= 0.1.7"
custom_derive = "= 0.1.7"
serde = { version = "= 1.0.136", features = ["derive"] }
serde_json = "= 1.0.78"
smol = "1.3.0"
